--- a/views/home.ejs
+++ b/views/home.ejs
@@ -79,7 +79,7 @@
                             <div class="card" class="ml-3 "; style="width:40%; margin-left: 5rem; margin-top: 1rem;">
                                   <div class="card-body">
                                     <h5 class="card-title"><%= project.title%></h5>
-                                    <h6 class="card-subtitle mb-2 text-muted">By Author</h6>
+                                    <h6 class="card-subtitle mb-2 text-muted">By <%= project.author.username%></h6>
                                     <p class="card-text"><%= project.shortDesc %></p>
                                     <a href="/projects/<%= project._id %>" class="card-link btn btn-info">View</a>
                                     <a href="#" class="card-link">Another link</a>
@@ -178,8 +178,5 @@
                 </div>
             </div>
         </div>
-        <script type="text/javascript" src="/JavaScript/home.js">
-        </script>
-        </body>
-
-        </html>
+<% include partials/footer %>
+       
