--- a/views/partials/landing-navbar.ejs
+++ b/views/partials/landing-navbar.ejs
@@ -1,12 +1,22 @@
  <nav>
         <div class="navbar2">
-            <img src="/Images/Logo.png" alt="" style="height: 70px; margin:10px;" class="ml-5">
+            <a href="/">
+            <img src="/Images/Logo.png" alt="" style="height: 70px; margin:10px;" class="ml-5"></a>
             <div class="navbar-btn">
-                <div id="togglebtn" class="btn btn-success mr-5 mt-3 ">
-                    Login/SignUp
+                
+                <div id="togglebtn" class=" mr-5 mt-3 ">
+                    <% if(!currentUser){%>
+                   <a href="/register" class="btn btn-success "> SignUp</a>
+                   <a href="/login" class="btn btn-info">Login</a>
+                   <% } else { %>
+                   <span class="btn btn-info text-capitalize"><%= currentUser.username %></span>
+                      <a class="btn btn-danger" href="/logout">Logout</a>
+                    <% } %>
                 </div>
+                
+               
             </div>
-            <div class="navbar1 navbar-hide " id="navbar-hide">
+          <!--   <div class="navbar1 navbar-hide " id="navbar-hide">
 
                 <div class="register_page">
                     <div class="text-center mt-5 mb-1">
@@ -69,5 +79,5 @@
                 </div>
                 <button id="cancel" class="btn-danger btn mt-3 p-1" onclick="cancelfun()"><i class="fa fa-remove"></i>Cancel</button>
             </div>
-        </div>
+        </div> -->
     </nav>
