--- a/views/projects/index.ejs
+++ b/views/projects/index.ejs
@@ -1,14 +1,26 @@
 <% include ../partials/header %>
-	
-
- <% Projects.forEach(function(project) { %>
-			  <div class="card" class="ml-3 "; style="width:40%; margin-left: 5rem; margin-top: 1rem;">
-                                  <div class="card-body">
+    <% include ../partials/landing-navbar %>
+        <div id="wrapper">
+            <div class="section ">
+                <div class="row " style=" margin: auto; margin-top:5rem;">
+                    <% Projects.forEach(function(project) { %>
+                        <div class="col-lg-1"></div>
+                        <div class="col-lg-4 mt-3">
+                            <div class="card" class="">
+                                <div class="card-body">
                                     <h5 class="card-title"><%= project.title%></h5>
-                                    <h6 class="card-subtitle mb-2 text-muted">By Author</h6>
-                                    <p class="card-text"><%= project.shortDesc %></p>
+                                    <h6 class="card-subtitle mb-2 text-muted">By <%= project.author.username%></h6>
+                                    <p class="card-text">
+                                        <%= project.shortDesc %>
+                                    </p>
                                     <a href="/projects/<%= project._id %>" class="card-link btn btn-info">View</a>
                                     <a href="#" class="card-link">Another link</a>
-                                  </div>
+                                </div>
                             </div>
-  <% });%>
+                        </div>
+                        <div class="col-lg-1"></div>
+                        <% });%>
+                </div>
+            </div>
+        </div>
+      <% include ../partials/footer %>
