--- a/public/StyleSheets/home.css
+++ b/public/StyleSheets/home.css
@@ -158,3 +158,20 @@ h1 {
     margin: auto;
     text-align: center;
 }
+
+
+input::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color:#006266!important;
+    text-align: center;
+    opacity: 1; /* Firefox */
+}
+
+input:-ms-input-placeholder { /* Internet Explorer 10-11 */
+    color:#006266 !important;
+    text-align: center;
+}
+
+input::-ms-input-placeholder { /* Microsoft Edge */
+    color: #006266 !important;
+    text-align: center;
+}
