--- a/views/projects/show.ejs
+++ b/views/projects/show.ejs
@@ -1,57 +1,56 @@
 <% include ../partials/header %>
-<div class="container">
-    <div class=" mt-3 ">
-        <div class="row">
-            <div class="col-lg-3 col-md-3">
-                <p class="lead">Project</p>
-                <div class="list-group">
-                    <li class="list-group-item active"><i class="fa fa-eye"></i>  Info <i class="fa fa-check-circle float-right"></i></li>
-                   
-                      <li class="list-group-item"><a href="/blogs/<%= project._id %>/edit" style="color:inherit;"><i class="fa fa-edit"></i> Update</a></li>
-            <form action="/blogs/<%= project._id %>?_method=DELETE" method="POST" >
-                
-              <li class="list-group-item "><i class="fa fa-trash"></i> <input type="submit" value="Delete" style="background: none;color: inherit;border: none;padding: 0;font: inherit;cursor: pointer;outline: inherit;"></li>
-            </form>
-       
-                    
+    <% include ../partials/landing-navbar %>
+        <div class="container bg-inverse">
+            <div class=" mt-3 ">
+                <div class="row">
+                    <div class="col-lg-3 col-md-3">
+                        <p class="lead">Project</p>
+                        <div class="list-group">
+                            <li class="list-group-item active"><i class="fa fa-eye"></i> Info <i class="fa fa-check-circle float-right"></i></li>
+                            <li class="list-group-item"><a href="/blogs/<%= project._id %>/edit" style="color:inherit;"><i class="fa fa-edit"></i> Update</a></li>
+                            <form action="/blogs/<%= project._id %>?_method=DELETE" method="POST">
+                                <li class="list-group-item "><i class="fa fa-trash"></i>
+                                    <input type="submit" value="Delete" style="background: none;color: inherit;border: none;padding: 0;font: inherit;cursor: pointer;outline: inherit;">
+                                </li>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="col-lg-9 col-md-9 border rounded p-2">
+                        <div>
+                            <div class="float-right bg-primary text-white mr-1 p-lg-2 rounded text-center">
+                                <% var btime = project.posted  %>
+                                    <%= btime.getDate() %> /
+                                        <%= btime.getMonth() %>
+                                            <br>
+                                            <b> <%= btime.getFullYear() %></b>
+                            </div>
+                            <div>
+                                <h4 class="text-info mt-3 text-center text-capitalize "><%= project.title %></h4>
+                                <i> <h6 >by <%= project.author.username %> </h6></i>
+                            </div>
+                        </div>
+                        <p class="bg-info m-3">
+                            <%= project.technology %>
+                        </p>
+                        <div class="alert alert-primary " role="alert">
+                            <h3>Brief:</h3>
+                            <p>
+                                <%= project.shortDesc %>
+                            </p>
+                        </div>
+                        <br>
+                        <div class="alert alert-dark " role="alert">
+                            <h3>Description:</h3>
+                            <p>
+                                <%- project.body %>
+                            </p>
+                        </div>
+                        <br>
+                        <br>
+                        <br>
+                    </div>
                 </div>
             </div>
-            <div class="col-lg-9 col-md-9 border rounded p-2">
-                
-        <div>
-             <div class="float-right bg-primary text-white mr-1 p-lg-2 rounded text-center">
-                <% var btime = project.posted  %>
-                <%= btime.getDate() %> /
-                <%= btime.getMonth() %>
-                <br>
-                <b> <%= btime.getFullYear() %></b>
-                
-            </div>
-            <div>
-                <h4 class="text-info mt-3 "><%= project.title %></h4>
-            </div>
-           
-        </div>
-        <div class="p-1">
-            <p>
-                <%- project.body %>
-            </p>
+            <br>
         </div>
         <br>
-           <i> <h5 >Submitted by-Author </h5></i>
-        <br>
-        <br>
-            </div>
-        </div>
-        
-    
-      
-    
-
-     
-        
-</div>
-          
-      <br>
-    </div>
-     <br>
