--- a/views/home.ejs
+++ b/views/home.ejs
@@ -71,7 +71,7 @@
                     </div>
                 </div>
             </div>
-            <div class="section active">
+            <div class="section ">
                 <div class="text-center m-3" style="font-size:25px; color: white">Live Project</div>
                 <div class="row">
                     <% Projects.forEach(function(project) { console.log(project._id);
@@ -87,20 +87,17 @@
                             </div>
                               <% });%>
                         </div>
-                 
+
                 <div class="m-3 text-center">
                     <a href="projects" class="btn btn-success ">View More Projects</a>
                     <a href="projects/new" class="btn btn-success">I have project Idea</a>
                 </div>
             </div>
-            <div class="section">
-                <div class="slide" data-anchor="slide1">
-                    <div class="row">
-                        <div class="col-lg-6">
-                        </div>
-                        <div class="col-lg-6">
-                        </div>
-                    </div>
+            <div class="section active">
+                <div class="slide text-center" data-anchor="slide1">
+                  <h1>WHY &alpha;bit</h1>
+                      <h3 class="mt-2">  To  promote and improve the overall programming skills of the students.
+                      </h3>
                 </div>
                 <div class="slide" data-anchor="slide2">
                     <div class="row">
@@ -126,7 +123,7 @@
                     </div>
                     <div class="col-lg-2">
                         <div class="card">
-                            <img class="card-img-top " src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAoaAAAAJDQ4ZmI0N2JhLTYyMGQtNDcxMC04ODI5LTA1ZDNiNjkxYWI2Zg.jpg" alt="Card image" style="width:100%">
+                            <img class="card-img-top " src="https://res.cloudinary.com/skpuri/image/upload/c_scale,w_1077/v1522903889/shubhamPuri.jpg" alt="Card image" style="width:100%">
                             <div class="card-body">
                                 <h4 class="card-title">Shubham Puri</h4>
                                 <p class="card-text">Some example text some example text. John Doe is an architect and engineer</p>
@@ -141,7 +138,7 @@
                                 <p class="card-text">Some example text some example text. Jane Doe is an architect and engineer</p>
                                 <a href="#" class="btn btn-primary">See Profile</a>
                             </div>
-                            <img class="card-img-bottom" src="https://www.w3schools.com/bootstrap4/img_avatar5.png" alt="Card image" style="width:100%">
+                            <img class="card-img-bottom" src="http://res.cloudinary.com/skpuri/image/upload/v1522994158/IMG-20180405-WA0029.jpg" alt="Card image" style="width:100%">
                         </div>
                     </div>
                     <div class="col-lg-2">
@@ -161,12 +158,12 @@
                                 <p class="card-text">Some example text some example text. Jane Doe is an architect and engineer</p>
                                 <a href="#" class="btn btn-primary">See Profile</a>
                             </div>
-                            <img class="card-img-bottom" src="https://www.w3schools.com/bootstrap4/img_avatar5.png" alt="Card image" style="width:100%">
+                            <img class="card-img-bottom" src="http://res.cloudinary.com/skpuri/image/upload/v1522905143/IMG-20180405-WA0003.jpg" style="width:100%">
                         </div>
                     </div>
                     <div class="col-lg-2">
                         <div class="card">
-                            <img class="card-img-top" src="https://www.w3schools.com/bootstrap4/img_avatar1.png" alt="Card image" style="width:100%">
+                            <img class="card-img-top" src="https://res.cloudinary.com/skpuri/image/upload/v1522905314/IMG-20180405-WA0002.jpg" alt="Card image" style="width:100%">
                             <div class="card-body">
                                 <h4 class="card-title">Anupam</h4>
                                 <p class="card-text">Some example text some example text. John Doe is an architect and engineer</p>
@@ -179,4 +176,3 @@
             </div>
         </div>
 <% include partials/footer %>
-       
