--- a/views/projects/index.ejs
+++ b/views/projects/index.ejs
@@ -2,7 +2,10 @@
     <% include ../partials/landing-navbar %>
         <div id="wrapper">
             <div class="section ">
-                <div class="row " style=" margin: auto; margin-top:5rem;">
+              <div class="text-center" style="color:white; font-size:2rem; margin: auto; margin-top:5rem;">
+                All Projects
+              </div>
+                <div class="row mt-3">
                     <% Projects.forEach(function(project) { %>
                         <div class="col-lg-1"></div>
                         <div class="col-lg-4 mt-3">
