--- a/public/StyleSheets/home.css
+++ b/public/StyleSheets/home.css
@@ -2,7 +2,7 @@
 *{
   margin:0;
   padding:0;
-  
+
 }
 .navbar-btn{
  top:0px;
@@ -13,7 +13,7 @@
 
 .navbar-hide{
   display:none;
-  
+
 }
 .navbar1{
   top:0px;
@@ -21,7 +21,7 @@
   z-index:99;
   width:100vw;
   height:100vh;
-  background: #000;  
+  background: #000;
   text-align:center;
 }
 .navbar2 {
@@ -61,14 +61,12 @@
 .landing-page {
     color: white;
     margin: auto;
-    background: /* linear-gradient(to right, rgba(28, 51, 110, 0.8), rgba(235, 235, 235, 0.7)),
-    */
-    linear-gradient(to right, #360033B3, #0b8793B3),
-    /* your image */
-    url('/Images/snap-2.jpg');
+    /* background:  linear-gradient(to right, rgba(28, 51, 110, 0.8), rgba(235, 235, 235, 0.7)),
+    linear-gradient(to right, #360033B3, #0b8793B3),url('http://avante.biz/wp-content/uploads/Computer-Wallpaper/Computer-Wallpaper-022.jpg'); */ */
     /*position: relative;*/
-    background-size: contain;
-    background-repeat:  no-repeat;
+
+    background-color: #000;
+
 }
 
 
@@ -101,7 +99,7 @@
     height: 100vh;
     float: left;
     display: inline;
-   
+
     padding-top: 12vh;
 }
 
@@ -116,7 +114,7 @@
     height: 100vh;
     float: left;
     padding-top: 12vh;
-    
+
     z-index: 999;
     float: left;
 }
@@ -127,7 +125,7 @@
     width: 50%;
     height: 100vh;
     float: left;
-    
+
 }
 .whyProjects>p {
     padding: 10%;
@@ -141,7 +139,7 @@
     padding: 10px;
     color: white;
     margin-left: 50%;
-    
+
 }
 
 
