--- a/views/partials/landing-navbar.ejs
+++ b/views/partials/landing-navbar.ejs
@@ -1,9 +1,13 @@
+</head>
+
+<body >
+
  <nav>
         <div class="navbar2">
             <a href="/">
             <img src="/Images/Logo.png" alt="" style="height: 70px; margin:10px;" class="ml-5"></a>
             <div class="navbar-btn">
-                
+
                 <div id="togglebtn" class=" mr-5 mt-3 ">
                     <% if(!currentUser){%>
                    <a href="/register" class="btn btn-success "> SignUp</a>
@@ -13,8 +17,8 @@
                       <a class="btn btn-danger" href="/logout">Logout</a>
                     <% } %>
                 </div>
-                
-               
+
+
             </div>
           <!--   <div class="navbar1 navbar-hide " id="navbar-hide">
 
