--- a/views/projects/index.ejs
+++ b/views/projects/index.ejs
@@ -11,13 +11,25 @@
                         <div class="col-lg-4 mt-3">
                             <div class="card" class="">
                                 <div class="card-body">
-                                    <h5 class="card-title"><%= project.title%></h5>
-                                    <h6 class="card-subtitle mb-2 text-muted">By <%= project.author.username%></h6>
+                                    <h5 class="card-title"><strong>
+                                    <%= project.title%></strong>
+                                    <span class="float-right btn btn-dark btn-sm">
+                                     <%= project.type%>
+                                    </span>
+                                    </h5>
+                                    <h6 class="card-subtitle mb-2 text-muted">
+                                    <%= project.technology%>
+
+                                    </h6>
                                     <p class="card-text">
-                                        <%= project.shortDesc %>
+                                    <%= project.shortDesc.substr(0,120)  %>
+                                    
                                     </p>
                                     <a href="/projects/<%= project._id %>" class="card-link btn btn-info">View</a>
-                                    <a href="#" class="card-link">Another link</a>
+                                    <a href="#" class="btn btn-dark"><i class="fa fa-eye"></i> <%= project.views %> </a>
+                                    <span class="float-right">
+                                    By <%= project.author.username%>
+                                    </span>
                                 </div>
                             </div>
                         </div>
