--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,70 +6,45 @@
                 <a href="roadmap" class="btn btn-info" >RoadMap for CSE</a>
             </div>
             <div class="section ">
+                <div class="text-center m-3" style="font-size:25px; color: white">Events</div>
                 <div class="row">
-                    <div class="col-xl-6  col-lg-6">
-                        <div class="text-center" style="font-size:25px;">Live Contest</div>
-                        <div class="row" style="color:white">
-                            <div class="col-xl-1"></div>
-                            <div class="card bg-dark col-xl-4">
-                                <div class="card-header">Header</div>
-                                <div class="card-body"><img src="https://www.codechef.com/sites/all/themes/abessive/logo.png" class="img-fluid"></div>
-                                <div class="card-footer">Footer</div>
+                    <% Events.forEach(function(event) {
+                             %>
+                            <div class="card" class="ml-3 "; style="width:40%; margin-left: 5rem; margin-top: 1rem;">
+                                  <div class="card-body">
+                                  <h5 class="card-title text-capitalize"><strong>
+                                  <%= event.title%></strong>
+                                  <span class="float-right btn btn-dark btn-sm">
+                                   <%= event.EventType%>
+                                  </span>
+                                  </h5>
+                                  <h6 class="card-subtitle mb-2 text-muted">
+                                  <%= event.startTime%> - <%= event.endTime%>
+
+                                  </h6>
+                                  <p class="card-text">
+                                      <% var EventDesc = event.breif ;
+                                      try{
+                                          var EventDesc =EventDesc.substr(0,120) ;
+                                      }catch(e){
+
+                                      }%>
+                                      <%= EventDesc  %>
+                                  </p>
+                                  <a href="/events/<%= event._id %>" class="card-link btn btn-info">View</a>
+                                  <a href="#" class="btn btn-dark"><i class="fa fa-hand-o-up"></i> <%= event.interested.length %> </a>
+
+                                  <span class="float-right">
+                                  By <%= event.author.username%>
+                                  </span>
+                                  </div>
                             </div>
-                            <div class="col-xl-2"></div>
-                            <div class="card bg-dark  col-xl-4">
-                                <div class="card-header">Header</div>
-                                <div class="card-body"><img src="https://www.codechef.com/sites/all/themes/abessive/logo.png" class="img-fluid"></div>
-                                <div class="card-footer">Footer</div>
-                            </div>
-                            <div class="col-xl-1"></div>
+                              <% });%>
                         </div>
-                        <br>
-                        <div class="row" style="color:white">
-                            <div class="col-xl-1"></div>
-                            <div class="card bg-dark col-xl-4">
-                                <div class="card-header">Header</div>
-                                <div class="card-body"><img src="https://www.codechef.com/sites/all/themes/abessive/logo.png" class="img-fluid"></div>
-                                <div class="card-footer">Footer</div>
-                            </div>
-                            <div class="col-xl-2"></div>
-                            <div class="card bg-dark col-xl-4">
-                                <div class="card-header">Header</div>
-                                <div class="card-body"><img src="https://www.codechef.com/sites/all/themes/abessive/logo.png" class="img-fluid"></div>
-                                <div class="card-footer">Footer</div>
-                            </div>
-                            <div class="col-xl-1"></div>
-                        </div>
-                    </div>
-                    <div class="col-xl-6  col-lg-6">
-                        <div class="text-center" style="font-size:25px;">Top performers</div>
-                        <table class="table m-3">
-                            <thead class="thead-dark">
-                                <tr>
-                                    <th>Firstname</th>
-                                    <th>Lastname</th>
-                                    <th>Email</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>John</td>
-                                    <td>Doe</td>
-                                    <td>john@example.com</td>
-                                </tr>
-                                <tr>
-                                    <td>Mary</td>
-                                    <td>Moe</td>
-                                    <td>mary@example.com</td>
-                                </tr>
-                                <tr>
-                                    <td>July</td>
-                                    <td>Dooley</td>
-                                    <td>july@example.com</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
+
+                <div class="m-3 text-center">
+                    <a href="events" class="btn btn-success ">View More Events</a>
+                    <a href="events/new" class="btn btn-success">Submit an Event</a>
                 </div>
             </div>
             <div class="section ">
@@ -79,7 +54,7 @@
                              %>
                             <div class="card" class="ml-3 "; style="width:40%; margin-left: 5rem; margin-top: 1rem;">
                                   <div class="card-body">
-                                  <h5 class="card-title"><strong>
+                                  <h5 class="card-title text-capitalize"><strong>
                                   <%= project.title%></strong>
                                   <span class="float-right btn btn-dark btn-sm">
                                    <%= project.type%>
@@ -90,7 +65,13 @@
 
                                   </h6>
                                   <p class="card-text">
-                                      <%= project.shortDesc.substr(0,120)  %>
+                                      <% var projectDesc = project.shortDesc ;
+                                      try{
+                                          var projectDesc = project.shortDesc.substr(0,120) ;
+                                      }catch(e){
+
+                                      }%>
+                                      <%= projectDesc  %>
                                   </p>
                                   <a href="/projects/<%= project._id %>" class="card-link btn btn-info">View</a>
                                   <a href="#" class="btn btn-dark"><i class="fa fa-eye"></i> <%= project.views %> </a>
