--- a/views/projects/new.ejs
+++ b/views/projects/new.ejs
@@ -9,7 +9,8 @@
                     <div class="form-group p-3 border rounded w-75 mx-auto">
                         <div class="form-group  m-3">
                             <label for="name[title]">Title:</label>
-                            <input type="text" name="project[title]" placeholder="title" class="form-control " required="true">
+                            <input type="text" name="project[title]" id="projectName" placeholder="Project Name" onfocus="formvalidate(3,projectName,projectName)" class="form-control " required="true">
+
                         </div>
                         <div class="form-group m-3">
                             <label for="sel1" name="project[type]">Project Type:</label>
@@ -18,11 +19,13 @@
                                 <option value="Web Development">Web Development</option>
                                 <option value="Machine Learning">Machine Learning</option>
                                 <option value="AI">Artificial Intelligence</option>
+                                <option value="Others">Others</option>
+
                             </select>
                         </div>
                         <div class="form-group  m-3">
                             <label for="name[technology]">Technology to be used:</label>
-                            <input type="text" name="project[technology]" placeholder="like Php" class="form-control " required="true">
+                            <input type="text" name="project[technology]" placeholder="like Php" class="form-control" id="autoFill" required="true">
                         </div>
                         <div class="form-group  m-3">
                             <label for="name[title]">Short Description(must be between 30 - 50 words):</label>
